# torch-dynamics

./: .gitignore  CMakeLists.txt  Project.toml  README.md  cartpole1l.urdf  cartpole2l.urdf  cartpole_double2.urdf  collect_expert_ipopt.jl  example.cpp  forward_derivatives.c  forward_derivatives.h  forward_dynamics.c  forward_dynamics.h  forward_dynamics_wrapper.cpp  gen_symbolic.cpp  ipopt.jl  pendulum1l.urdf  simple_altro.jl  test_dynamics.jl  test_trajopt.jl  test_trajopt_altro.jl  test_trajopt_ipopt.jl  test_trajopt_ipopt_energy.jl  traj.jld2  traj.npz  visualize.py
cartpole1l/: generated_cont_derivatives.c  generated_cont_derivatives.h  generated_cont_dynamics.c  generated_cont_dynamics.h  generated_derivatives.c  generated_derivatives.h  generated_dynamics.c  generated_dynamics.h
cartpole1l-v2/: generated_cont_derivatives.c  generated_cont_derivatives.h  generated_cont_dynamics.c  generated_cont_dynamics.h  generated_derivatives.c  generated_derivatives.h  generated_dynamics.c  generated_dynamics.h
cartpole2l/: CMakeLists.txt  generated_cont_derivatives.c  generated_cont_derivatives.h  generated_cont_dynamics.c  generated_cont_dynamics.h  generated_derivatives.c  generated_derivatives.h  generated_dynamics.c  generated_dynamics.h
cpp/: forward_dynamics.py  forward_dynamics2.py  forward_dynamics_wrapper.cpp  setup.py  test.py
cuda/: dynamics.py  dynamics_function.py  setup.py  test_dynamics.py
generated_dynamics/: example.cpp  generated_cont_derivatives.c  generated_cont_derivatives.h  generated_cont_dynamics.c  generated_cont_dynamics.h  generated_derivatives.c  generated_dynamics.c  generated_dynamics.h  test2.jl  test_trajopt.jl  visualize.py
generated_dynamics2/: example.cpp  generated_derivatives.c  generated_dynamics.h  test_dynamics.jl
lib/: test.jl
pendulum1l/: generated_cont_derivatives.c  generated_cont_dynamics.c  (+6 more)
(+23 files in other folders)
